# python_developer_pro

./: .gitignore  README.md
.github/workflows/: HW02_mypy_check.yml  HW04_pylint.yml  HW05_pytest.yml  HW06_pytest.yml  HW07_ab_wrk_test.yml  (+4 more)
hw_01/: Dockerfile  Makefile  README.md  config.json  docker-compose.yaml  log_interpreter.py  pyproject.toml  requirements.txt
hw_02/: Dockerfile  Makefile  README.md  basic.py  intermediate.py  requirements.txt
hw_04/: README.md  requirements.txt
hw_05/: README.md  docker-compose.yaml  requirements.txt
hw_06/: README.md
hw_07/: README.md  requirements.txt  test_srv.py  web_srv.py
hw_08/: Makefile  README.md  requirements.txt
hw_09/: Dockerfile  README.md  requirements.txt
hw_10/: README.md  requirements.txt
hw_11/: README.md  homework_colab.ipynb  requirements.txt
hw_12/: README.md  best_100_movies.txt  best_100_movies_pandas.py  hw12_best_100_movies.ipynb  interactive_dashboard.html  pyproject.toml  requirements.txt
hw_13/: .env.default  README.md  main.py  pyproject.toml  requirements.txt
hw_13/bot/: config.py  requirements.txt  run.sh  telegram_bot.py
hw_13/model/lora_adapters/: adapter_config.json
hw_13/notebook/: linux_command_trainer.ipynb  test_results.txt
hw_13/notebook/data/: linux_commands.jsonl
hw_14/: README.md  appsinstalled_pb2.py  memc_load.py  memc_load_multi.py  pytest.ini  requirements.txt
hw_16/: Dockerfile  README.md  crawler.py  docker-compose.yaml  news_2026-01-01_21-51-26.json  requirements.txt
hw_17/: README.md  appsinstalled.proto  go.mod  go.sum  memc_load.go
(+39 files in other folders)
