[project]
name = "hw-12"
version = "0.1.0"
description = "Data analysis project"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
    "plotly>=5.18.0",
    "scipy>=1.11.4",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
