[project]
name = "hw-13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.1",
    "peft>=0.18.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.1",
]
